完成imgui的悬浮

--- a/Azur/CMakeLists.txt
+++ b/Azur/CMakeLists.txt
@@ -20,4 +20,4 @@ add_library(${AZurLibeName} SHARED ${LIBSOURCE})
 
 target_precompile_headers(${AZurLibeName} PRIVATE azphc.h)
 #target_include_directories(${AZurLibeName} PRIVATE  "${CMAKE_CURRENT_LIST_DIR}/source")
-target_link_libraries(${AZurLibeName} ${LINK_LIB})
+target_link_libraries(${AZurLibeName} PRIVATE ${LINK_LIB})
