--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ ENDIF (CMAKE_SYSTEM_NAME MATCHES "Linux")
 #设置路径变量
 set(LIB_PATH ${CMAKE_BINARY_DIR}/bin)
 set(EXE_PATH ${CMAKE_BINARY_DIR}/bin)
-set(AZUR_PATH ${CMAKE_CURRENT_SOURCE_DIR}/Azur)
+set(AZUR_PATH ${CMAKE_CURRENT_SOURCE_DIR}/Azure)
 set(Sandbox_PATH ${CMAKE_CURRENT_SOURCE_DIR}/Sandbox)
 set(LIBRARY_OUTPUT_PATH ${LIB_PATH})
 set(EXECUTABLE_OUTPUT_PATH ${EXE_PATH})       #设置可执行文件的输出目录
