--- a/Sandbox/CMakeLists.txt
+++ b/Sandbox/CMakeLists.txt
@@ -8,9 +8,9 @@ get_filename_component(PARENT_FOLDER_ABSOLUTE2 ${CMAKE_CURRENT_SOURCE_DIR} DIREC
 file(GLOB_RECURSE SOURCE_FILE "*.cpp" "*.h")
 
 #message("${AZUR_PATH}")
-include_directories(${AZUR_PATH})
+include_directories(${AZURE_PATH})
 link_directories(${LIB_PATH})
 
-add_executable(AzurEngine ${SOURCE_FILE})
+add_executable(AzureEngine ${SOURCE_FILE})
 
-target_link_libraries(AzurEngine ${LINK_LIB} Azur.dll)
+target_link_libraries(AzureEngine ${LINK_LIB} Azure.dll)
