--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,21 @@
     "cmake.configureSettings": {
         "CMAKE_TOOLCHAIN_FILE":"E:/vcpkg-master/scripts/buildsystems/vcpkg.cmake",
         "VCPKG_TARGET_TRIPLET":"x64-windows"
+    },
+    "files.associations": {
+        "xstring": "cpp",
+        "ios": "cpp",
+        "array": "cpp",
+        "compare": "cpp",
+        "format": "cpp",
+        "functional": "cpp",
+        "memory": "cpp",
+        "ratio": "cpp",
+        "tuple": "cpp",
+        "type_traits": "cpp",
+        "utility": "cpp",
+        "xmemory": "cpp",
+        "xtr1common": "cpp",
+        "xutility": "cpp"
     }
 }
