--- a/Azure/CMakeLists.txt
+++ b/Azure/CMakeLists.txt
@@ -15,6 +15,7 @@ if(CMAKE_BUILD_TYPE STREQUAL "Debug")
     add_definitions(-DAZ_ENABLE_ASSERTS)
 endif ()
 
+add_definitions(-DGLM_ENABLE_EXPERIMENTAL)
 
 add_library(${AZurLibeName} SHARED ${LIBSOURCE})
 
